--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
 </head>
 <body>
     <header>
-        <h1> </h1>
-        <p></p>
+        <h1>Cześć, jestem Daniel</h1>
+        <p> Jestem ojcem, mężem, studentem, pracownikiem oraz pasjonatem programowania. Serdecznie zapraszam Ciebie do zapoznania się z moimi projektami.</p>
         <!-- krótki opis mojej osoby ;) -->
+
+        <nav>
+            
+        </nav>
     </header>
     <main>
         <section>
             <div>
-                <h3></h3>
+                <h3>ToDoList</h3>
+                <p></p>
+            </div>
+            <div>
+                <h3>Webshop</h3>
+                <p></p>
+            </div>
+            <div>
+                <h3>Sort of a game</h3>
                 <p></p>
             </div>
 
