--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,19 +21,18 @@
     </header>
     <main>
         <section>
-            <div>
+            <a href=""><div>
                 <h3>ToDoList</h3>
                 <p></p>
-            </div>
-            <div>
+            </div></a>
+            <a href=""><div>
                 <h3>Webshop</h3>
                 <p></p>
-            </div>
-            <div>
-                <h3>Sort of a game</h3>
+            </div></a>
+            <a href=""><div>
+                <h3>sort of a game</h3>
                 <p></p>
-            </div>
-
+            </div></a>
         </section>
 
     </main>
