--- a/index.html
+++ b/index.html
@@ -8,31 +8,50 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css" >
 </head>
 <body>
     <header>
-        <h1>Cześć, jestem Daniel</h1>
-        <p> Jestem ojcem, mężem, studentem, pracownikiem oraz pasjonatem programowania. Serdecznie zapraszam Ciebie do zapoznania się z moimi projektami.</p>
+        <h1>Hi, I'm Daniel</h1>
+        <p> I am a <em>father</em>, <strong>husband</strong>, <b>student</b>, employee and I am <u>passionate about programming</u>.<br /><br /> I cordially invite you to familiarize yourself with my projects.</p>
         <!-- krótki opis mojej osoby ;) -->
 
         <nav>
-            
+            <ul>
+                <li></li>
+                <li></li>
+            </ul>
         </nav>
     </header>
     <main>
         <section>
-            <a href=""><div>
+            <h2> My Projects</h2>
+            <ul>
+            <li><a href=""><div>
                 <h3>ToDoList</h3>
                 <p></p>
-            </div></a>
-            <a href=""><div>
+            </div></a></li>
+            <li><a href=""><div>
                 <h3>Webshop</h3>
                 <p></p>
-            </div></a>
-            <a href=""><div>
-                <h3>sort of a game</h3>
+            </div></a></li>
+
+            <li><a href=""><div>
+                <h3>Sort of a game</h3>
                 <p></p>
-            </div></a>
+            </div></a></li>
+            </ul>
+        </section>
+        <section>
+            <address id="">
+                Daniel Adamczak<br />
+                Gdynia, Poland<br />
+                daniel.marcin.a@gmail.com<br />
+                +48 530 112 622<br />
+
+            </address>
+            
+
         </section>
 
     </main>
