--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header>
-        <h1>Hi, I'm Daniel</h1>
-        <p> I am a <em>father</em>, <strong>husband</strong>, <b>student</b>, employee and I am <u>passionate about programming</u>.<br /><br /> I cordially invite you to familiarize yourself with my projects.</p>
+        <h1>Hi, I'm Daniel</h1><br />
+        <p> I am a <em>father</em>, <strong>husband</strong>, <b>student</b>, employee and I am <u><strong>passionate about programming</strong></u>.<br /><br /> I cordially invite you to familiarize yourself with my projects.</p>
         <!-- krótki opis mojej osoby ;) -->
 
-        <nav>
-            <ul>
+        <nav >
+            <ul >
                 <li></li>
                 <li></li>
             </ul>
@@ -26,19 +26,20 @@
     <main>
         <section>
             <h2> My Projects</h2>
-            <ul>
-            <li><a href=""><div>
+            
+            <ul id="projects">
+            <li class="project"><a href=""><div>
                 <h3>ToDoList</h3>
-                <p></p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla cumque dolores voluptates labore, odit distinctio nobis esse molestiae blanditiis, soluta tenetur doloremque dignissimos consectetur nesciunt tempora ab dolorem consequatur voluptatibus.</p>
             </div></a></li>
-            <li><a href=""><div>
+            <li class="project"><a href=""><div>
                 <h3>Webshop</h3>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos officia repellat quibusdam vero exercitationem a ea aut consequatur consectetur totam mollitia, nemo dolorem unde quis earum atque blanditiis omnis quidem.</p>
             </div></a></li>
 
-            <li><a href=""><div>
+            <li class="project"><a href=""><div>
                 <h3>Sort of a game</h3>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, iure alias voluptatem ab aliquid praesentium nemo expedita commodi culpa officia, velit atque reiciendis dolor voluptas nihil et. Mollitia, architecto a.</p>
             </div></a></li>
             </ul>
         </section>
